RESOLVED FIXED158499
InvalidationPointInjectionPhase creates bogus InvalidationPoints that may even be inserted when it's not OK to exit
https://bugs.webkit.org/show_bug.cgi?id=158499
Summary InvalidationPointInjectionPhase creates bogus InvalidationPoints that may eve...
Saam Barati
Reported 2016-06-07 15:35:53 PDT
....
Attachments
Patch (2.01 KB, patch)
2016-06-07 15:54 PDT, Saam Barati
mark.lam: review+
Saam Barati
Comment 1 2016-06-07 15:42:29 PDT
Saam Barati
Comment 2 2016-06-07 15:54:31 PDT
Mark Lam
Comment 3 2016-06-07 15:55:55 PDT
Comment on attachment 280743 [details] Patch r=me
Saam Barati
Comment 4 2016-06-07 16:44:47 PDT
Note You need to log in before you can comment on or make changes to this bug.