Source/JavaScriptCore/dfg/DFGInvalidationPointInjectionPhase.cpp
@@ -58,6 +58,8 @@ public:
             if (!block)
                 continue;
             
+            m_originThatHadFire = CodeOrigin();
+            
             for (unsigned nodeIndex = 0; nodeIndex < block->size(); ++nodeIndex)
                 handle(nodeIndex, block->at(nodeIndex));
             
